[package]
name = "modbus-mqtt-bridge-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
futures = { version = "0.3.29", default-features = false, features = ["async-await"] }
rust-mqtt = { git = "https://github.com/sambenko/rust-mqtt.git", features = ["no_std", "defmt"], default-features = false }
rmodbus = { version = "0.7.6", features = ["heapless"], default-features = false }
rand_core = "0.6.4"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
heapless = "0.7.16"
embedded-io-async = { version = "0.6.0", features = ["defmt-03"], optional = true }

embassy-time = { version = "0.1.5", git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"], optional = true }

[features]
default = ["std", "embedded-io-async"]
embedded-io-async = ["dep:embedded-io-async"]
embassy = ["embedded-io-async", "dep:embassy-time"]
std = ["embedded-io-async", "embassy", "embassy-time/std"]