[package]
name = "modbus-mqtt-bridge-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
futures = { version = "0.3.29", default-features = false, features = ["async-await"] }
rust-mqtt = { git = "https://github.com/sambenko/rust-mqtt.git", features = ["no_std", "defmt"], default-features = false }
rmodbus = { version = "0.7.6", features = ["heapless"], default-features = false }
rand_core = "0.6.4"
thiserror = { version = "1.0", package = "thiserror-core" }
serde = { version = "1.0.192" }
heapless = "0.7.16"
embedded-io-async = { version = "0.6.0", features = ["defmt-03"], optional = true }

embassy-time = { version = "0.1.5", git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"], optional = true }

modbus-mqtt-bridge-core = { path = "../core", features = ["embassy"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.4"
anyhow = "1.0.75"
