[package]
name = "modbus-mqtt-bridge-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
futures = { version = "0.3.29", features = ["async-await"] }
rust-mqtt = { git = "https://github.com/sambenko/rust-mqtt.git" }
rmodbus = { version = "0.7.6", features = ["heapless"] }
rand_core = "0.6.4"
serde = { version = "1.0.192", features = ["derive"] }
heapless = "0.7.16"

modbus-mqtt-bridge-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.4"
anyhow = "1.0.75"
serde_json = "1.0.108"
log = "0.4.20"
embedded-io-adapters = { version = "0.6.0", features = ["std", "tokio-1"] }
env_logger = "0.10.1"
